# MBR-DAQ-App

./: .clang-format  .clang-tidy  .clang_format  .clang_tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  GUI.py  LICENSE  README.md  test.py
.github/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml  format.yml  package.yml
boardcode/: board_wifi.cpp  board_wifi.hpp  boardcode.ino
include/: data.hpp  gui.hpp
include/app/: app.hpp  context.hpp  gui.hpp  page.hpp  style.hpp
include/app/assets/: texture.hpp
include/app/assets/fonts/: OpenSans.hpp
include/app/assets/images/: BajaLogo.png.inc  PauseButton.png.inc  PlayButton.png.inc  StepButton.png.inc  app_icon.hpp  image_buttons.hpp
include/app/common/: scope.hpp  text.hpp
include/app/fonts/: OpenSans-Bold.ttf.inc  OpenSans-BoldItalic.ttf.inc  OpenSans-Italic.ttf.inc  OpenSans-Regular.ttf.inc  OpenSans.hpp
include/app/pages/: home.hpp  page.hpp  rpm.hpp  shock.hpp  view.hpp
include/app/pages/common/: plot.hpp  text.hpp
include/core/: ip.hpp  log.hpp  time.hpp
include/esp32/: backend.hpp  data.hpp
src/: app.rs  data.cpp  foo.cpp  gui.cpp  main.cpp  main.rs
src/app/: app.cpp  assets.rs  context.cpp  gui.cpp  page.cpp  pages.rs  sokol_impl.cpp  style.cpp
src/app/assets/: texture.cpp
src/app/assets/fonts/: OpenSans.cpp
src/app/assets/images/: app_icon.cpp  image_buttons.cpp
src/app/common/: plot.cpp  text.cpp
src/app/fonts/: OpenSans.cpp
src/app/pages/: home.cpp  page.cpp  rpm.cpp  shock.cpp  view.cpp
src/app/pages/common/: plot.cpp  text.cpp
src/core/: ip.cpp  log.cpp  time.cpp
src/esp32/: backend.cpp  data.cpp  mod.rs
tests/: test_foo.cpp
tests/core/: test_time.cpp
tests/test_framework/: catch_amalgamated.cpp
